--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,13 @@ __pycache__/
 # C extensions
 *.so
 
+*.csv
+
+data/
+
 # Distribution / packaging
+AvSigVersion.npy
+.vscode/
 .Python
 build/
 develop-eggs/
